<resources>
    <string name="app_name">Eateri</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Eateri</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_myOrders">My Orders</string>
    <string name="menu_myPayment">My Payment Methods</string>

    <string name="home_second">Home Second</string>


    <string name="button_register">REGISTER</string>
    <string name="button_login">LOGIN</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_logout">Logout</string>

    <string name="profile_fName">first name</string>
    <string name="profile_lname">last name</string>
    <string name="profile_title_personInfo">title</string>
    <string name="btnCancel">cancel</string>
    <string name="btnSave">Save</string>
    <string name="profile_email">Email</string>
    <string name="cart_food">food</string>
    <string name="cart_desc">desc</string>
    <string name="cart_rm">RM xx.xx</string>
    <string name="cart_foodimage">foodimage</string>
    <string name="profile_fName">First Name</string>
    <string name="profile_lname">Last Name</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_title_personInfo">PERSONAL INFORMATION</string>
    <string name="btnSave">SAVE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="navSetting">Settings</string>
</resources>
