<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="Home" />-->
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_myProfile" />
        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_myOrders" />
        <item
            android:id="@+id/nav_myPayment"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/menu_myPayment" />
    </group>
</menu>
