<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_myProfile"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eateri.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_foodDetails"
            app:destination="@id/nav_foodDetails" />
        <argument
            android:name="restID"
            app:argType="integer" />
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
    <!--<fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.eateri.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_myOrders"
        android:name="com.example.eateri.ui.myOrders.MyOrders"
        android:label="@string/menu_myOrders"
        tools:layout="@layout/fragment_myorders" />

    <fragment
        android:id="@+id/nav_myProfile"
        android:name="com.example.eateri.ui.myprofile.MyProfile"
        android:label="My Profile"
        tools:layout="@layout/fragment_myprofile" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.eateri.ui.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.eateri.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/myPaymentFragment"
        android:name="com.example.eateri.MyPaymentFragment"
        android:label="My Payment Methods"
        tools:layout="@layout/fragment_my_payment" />
    <fragment
        android:id="@+id/nav_foodDetails"
        android:name="com.example.eateri.foodDetails.FoodDetails"
        android:label="Eateri"
        tools:layout="@layout/fragment_food_details" >
        <argument
            android:name="restID"
            app:argType="integer" />
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.eateri.ui.settings.Setting"
        android:label="Setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.eateri.ui.help.Help"
        android:label="Help"
        tools:layout="@layout/fragment_help" />
</navigation>