<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.myprofile.MyProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_title_personInfo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_fname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/profile_fName"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_fName_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Loading..."
                    app:layout_constraintBottom_toBottomOf="@id/label_fname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_fname" />

                <EditText
                    android:id="@+id/profile_fname_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="6"
                    android:inputType="textPersonName"
                    android:maxEms="10"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/label_fname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_fname" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_lName"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/profile_lname"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_lName_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Loading..."
                    app:layout_constraintBottom_toBottomOf="@+id/label_lName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_lName" />

                <EditText
                    android:id="@+id/profile_lname_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="6"
                    android:inputType="textPersonName"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/label_lName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_lName"
                    app:layout_constraintVertical_bias="0.384" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Mobile Number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_hp_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Loading..."
                    app:layout_constraintBottom_toBottomOf="@+id/label_hp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_hp" />

                <EditText
                    android:id="@+id/profile_mobile_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="6"
                    android:inputType="phone"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/label_hp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_hp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_profile_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:text="@string/btnCancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_profile_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:text="@string/btnSave"
            android:visibility="gone"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="LOGIN INFORMATION"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/profile_email"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_email_data"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Loading..."
                    app:layout_constraintBottom_toBottomOf="@+id/label_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_email" />

                <EditText
                    android:id="@+id/profile_email_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="6"
                    android:inputType="textPersonName"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/label_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_email" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Change Password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>